New yarp interfaces for: single chain,  force torque sensors, status messages, command messages. Added test class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,9 @@ add_subdirectory(src/MotorControlHelpers)
 add_library(drc_shared
   src/OccupancyGrid.cpp
   src/utils/module_state_streamer.cpp
+  src/yarp_status_interface.cpp
+  src/yarp_ft_interface.cpp
+  src/yarp_single_chain_interface.cpp
   #${PCL_LIBRARIES}
 )
  
@@ -56,3 +59,5 @@ install(DIRECTORY include/${PROJECT_NAME}/
 
 install(DIRECTORY launch/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch)
+
+add_subdirectory(src/tests)
