--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,10 @@ FIND_PACKAGE(kdl_codyco REQUIRED)
 FIND_PACKAGE(srdfdom REQUIRED)
 FIND_PACKAGE(moveit_core REQUIRED)
 
+set(ROS_LIB_FOLDER $ENV{ROS_LIB_FOLDER} CACHE STRING "ros lib folder")
+
+message(STATUS ${ROS_LIB_FOLDER})
+ 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
@@ -24,8 +28,7 @@ catkin_package(
   INCLUDE_DIRS include
   LIBRARIES drc_shared planner_msgs idynutils
 )
-SET(ROS_HYDRO_LIB_FOLDER /opt/ros/hydro/lib/)
-LINK_DIRECTORIES(${ROS_HYDRO_LIB_FOLDER} ${WALKMAN_LIB_FOLDER} ${KDL_CODYCO_LIB_FOLDER} ${CODYCO_LIB_FOLDER})
+LINK_DIRECTORIES(${ROS_LIB_FOLDER} ${WALKMAN_LIB_FOLDER} ${KDL_CODYCO_LIB_FOLDER} ${CODYCO_LIB_FOLDER})
 
 include_directories(
   include
