Fixed possible linking issues in idynutils

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,7 @@ add_library(drc_shared SHARED
 
 add_library(idynutils SHARED src/idynutils.cpp
                              src/comanutils.cpp
+                             src/yarp_single_chain_interface.cpp
                              src/cartesian_utils.cpp)
  
 add_library(planner_msgs
