Added test for cartesian util quaternion. Added comment.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 2.8.11)
+include(ExternalProject)
 project(drc_shared)
 
 include(CheckCXXCompilerFlag)
@@ -12,6 +13,8 @@ else()
     message(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
 endif()
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/")
+
 FIND_PACKAGE(YARP REQUIRED)
 FIND_PACKAGE(iDynTree REQUIRED)
 FIND_PACKAGE(kdl_codyco REQUIRED)
@@ -22,6 +25,15 @@ FIND_PACKAGE(rosconsole REQUIRED)
 FIND_PACKAGE(kdl_parser REQUIRED)
 FIND_PACKAGE(moveit_core REQUIRED)
 FIND_PACKAGE(ICUB REQUIRED)
+
+enable_testing()
+set(gTestSource "/usr/src/gtest")
+ExternalProject_Add(GTest-ext SOURCE_DIR ${gTestSource}
+                              PREFIX "${CMAKE_CURRENT_BINARY_DIR}/external"
+                              INSTALL_COMMAND "")
+set(GTEST_LIB_DIRS "${CMAKE_CURRENT_BINARY_DIR}/external/src/GTest-ext-build/")
+set(GTEST_INCLUDE_DIRS ${gTestSource})
+set(GTEST_BOTH_LIBRARIES gtest gtest_main)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -42,7 +54,10 @@ catkin_package(
 include_directories(
   include
   ${catkin_INCLUDE_DIRS}
+  ${GTEST_INCLUDE_DIRS}
 )
+
+link_directories(${GTEST_LIB_DIRS})
 
 # for every file in drc_INCLUDES CMake already sets the property HEADER_FILE_ONLY
 file(GLOB_RECURSE drc_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/include" *.h)
@@ -164,3 +179,13 @@ install(DIRECTORY include/${PROJECT_NAME}/
 
 install(DIRECTORY launch/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch)
+
+#TESTING
+SET(CartesianUtilsTestLibs idynutils ${moveit_core_LIBRARIES} ${srdfdom_LIBRARIES}
+                                ${kdl_codyco_LIBRARIES} ${iDynTree_LIBRARIES}
+                                ${orocos_kdl_LIBRARIES} ${urdf_LIBRARIES} ${kdl_parser_LIBRARIES}
+                                ${YARP_LIBRARIES} icubmod ${GTEST_BOTH_LIBRARIES})
+ADD_EXECUTABLE(CartesianUtilsTest     src/tests/cartesian_utils_tests.cpp)
+TARGET_LINK_LIBRARIES(CartesianUtilsTest ${CartesianUtilsTestLibs})
+add_dependencies(CartesianUtilsTest GTest-ext idynutils)
+add_test(cartesian_utils_tests CartesianUtils)
