generic thread has a param helper - everything (but the control thread inside the module) is a shared_pointer - everything is weel-documented - basic test has succes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ include(YCMDefaultDirs)
 ycm_default_dirs(${VARS_PREFIX})
 catkin_package(
   INCLUDE_DIRS include
-  LIBRARIES drc_shared planner_msgs idynutils drc_utils tests_utils
+  LIBRARIES drc_shared planner_msgs idynutils drc_utils tests_utils generic_module
 )
 
 include_directories(
@@ -88,6 +88,12 @@ add_library(planner_msgs
   src/planner_msgs/flat_walk_plan.cpp
 )
 
+add_library(generic_module SHARED src/generic.cpp
+                                  include/drc_shared/generic_module.hpp 
+                                  include/drc_shared/generic_thread.hpp)
+#set_target_properties(generic_module PROPERTIES LINKER_LANGUAGE CXX)
+
+
 target_link_libraries(drc_utils    ${PCL_LIBRARIES}
                                    ${rosconsole_LIBRARIES})
 
@@ -111,7 +117,9 @@ target_link_libraries(idynutils ${moveit_core_LIBRARIES} ${srdfdom_LIBRARIES}
                                 ${orocos_kdl_LIBRARIES} ${urdf_LIBRARIES} ${kdl_parser_LIBRARIES}
                                 ${YARP_LIBRARIES} icubmod)
 
-install(TARGETS drc_shared planner_msgs idynutils drc_utils tests_utils
+target_link_libraries(generic_module ${YARP_LIBRARIES})
+
+install(TARGETS drc_shared planner_msgs idynutils drc_utils tests_utils generic_module
   grabber_example module_state_streamer_example # examples, comment this if not needed
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
@@ -154,7 +162,7 @@ install(TARGETS idynutils
         PUBLIC_HEADER DESTINATION "${${VARS_PREFIX}_INSTALL_INCLUDEDIR}/idynutils" COMPONENT dev)
 
         
-set_property(GLOBAL APPEND PROPERTY ${VARS_PREFIX}_TARGETS drc_shared idynutils drc_utils tests_utils)
+set_property(GLOBAL APPEND PROPERTY ${VARS_PREFIX}_TARGETS drc_shared idynutils drc_utils tests_utils generic_module)
 
 
 include(InstallBasicPackageFiles)
@@ -176,4 +184,4 @@ install(DIRECTORY launch/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch)
 
 #TESTING
-add_subdirectory(src/tests)
+#add_subdirectory(src/tests)
