--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -184,4 +184,4 @@ install(DIRECTORY launch/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch)
 
 #TESTING
-#add_subdirectory(src/tests)
+add_subdirectory(src/tests)
