--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,9 +93,10 @@ add_library(generic_module SHARED src/generic.cpp
                                   include/drc_shared/generic_thread.hpp)
 #set_target_properties(generic_module PROPERTIES LINKER_LANGUAGE CXX)
 
-
 target_link_libraries(drc_utils    ${PCL_LIBRARIES}
                                    ${rosconsole_LIBRARIES})
+
+target_link_libraries(tests_utils  ${orocos_kdl_LIBRARIES})
 
 target_link_libraries(drc_shared   ${iDynTree_LIBRARIES})
 
