--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,21 @@
-# Copyright: (C) 2014 Walkman Consortium
-# Authors: Mirko Ferrati, Enrico Mingo, Alessio Rocchi
-# CopyPolicy: Released under the terms of the GNU GPL v2.0.
+# 
+#  Copyright (C) 2014 Walkman
+#  Author: Mirko Ferrati, Enrico Mingo, Alessio Rocchi
+#  email: mirko.ferrati@gmail.com, enrico.mingo@iit.it, alessio.rocchi@iit.it
+#
+#  This program is free software: you can redistribute it and/or modify
+#  it under the terms of the GNU Lesser General Public License as published by
+#  the Free Software Foundation, either version 3 of the License, or
+#  (at your option) any later version.
+#
+#  This program is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+#  GNU Lesser General Public License for more details.
+#
+#  You should have received a copy of the GNU Lesser General Public License
+#  along with this program. If not, see <http://www.gnu.org/licenses/>
+#
 
 cmake_minimum_required(VERSION 2.8.12)
 if(COMMAND cmake_policy)
